Fix socials links wrapping on small screen sizes

--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ a:hover {
 
 input.search-field {
   /* height: 50px; */
-  width: 280px;
+  width: 260px;
   font-family: 'Courier New', monospace;
   background-color: inherit;
   padding: 16px 12px 16px 44px;
@@ -488,11 +488,11 @@ a.all-recipes-link {
   */
 
   .top-bar-social a {
-    margin-left: 2px;
+    margin-left: 4px;
   }
 
   .top-bar-social a:nth-child(2) {
-    margin-left: 6px;
+    margin-left: 10px;
   }
 
   .nav-menu {
